<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="label_search">Search</string>
    <string name="search_prompt">Enter search query</string>
    <string name="label_title">Title</string>
    <string name="label_image_result">Image Result</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_label">Advanced Search options</string>
    <string name="site_label">Site filter</string>
    <string name="image_type_label">Image Type</string>
    <string name="color_label">Color Filter</string>
    <string name="image_size_label">Image Size</string>
    <string name="save_label">Save</string>

    <string-array name="imageSizeArr">
        <item>any</item>
        <item>icon</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
        <item>xxlarge</item>
        <item>huge</item>
    </string-array>
    <string-array name="imageTypeArr">
        <item>any</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
    <string-array name="imageColorArr">
        <item>any</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>

</resources>